infrastructure/clusters/ramona/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/ttl: 10
    external-dns.alpha.kubernetes.io/hostname: ramona.fun
spec:
  tls:
    - secretName: whoami-tls
      hosts:
        - ramona.fun

  rules:
    - host: ramona.fun
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
